Update opencdms approach

--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
                 </div>
                 <div class="col-xl-6 col-lg-5">
                   <div class="featured-text text-center text-lg-left">
-                    <h4>What is a CDMS?</h4>
+                    <h4>What is a (non-compliant) CDMS?</h4>
                     <p class="text-black-100 mb-0" style="padding-bottom:8px;">
-                        At it’s most basic, a CDMS allows users to manually enter observation data into a database.
+                        At it’s most basic, a CDMS allow users to enter observation data into a database.
                     </p>
                     <p>
-                        A CDMS may have many other functions, including:
+                        Existing solutions may have many other capabilities, including:
                     </p>
                     <p class="text-black-50 mb-0">
                         <ul>
@@ -276,7 +276,7 @@
           <div class="featured-text text-center text-lg-left">
             <h4>Approach</h4>
             <p class="text-black-100 mb-0" style="padding-bottom:8px;">
-                To help ensure that OpenCDMS is a success, and to expedite the development, we are taking the following approach:
+                To help ensure that OpenCDMS is a success, and to expedite the development, we are currently taking the following approach:
             </p>
             <p class="text-black-100 mb-0" style="padding-bottom:8px;">
               <ul>
@@ -291,6 +291,29 @@
 
   
   </section>
+  
+  
+  
+  
+  <!-- Signup Section --
+  <section id="signup" class="signup-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-lg-8 mx-auto text-center">
+
+          <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+          <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+
+          <form class="form-inline d-flex">
+            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
+            <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
+          </form>
+
+        </div>
+      </div>
+    </div>
+  </section>
+  -->
   
   
     <!-- Contact Section -->
