Minor changes before making site live at opencdms.org
- Changed "What is a CDMS" section to give an explanation of "Traditional CDMS"
- Removed "Approach" section
- Added link to OpenCDMD GitHub organisation

--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#background">Background</a>
           </li>
-
+<!--
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#approach">Approach</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
- 
+ -->
         </ul>
       </div>
     </div>
@@ -170,9 +170,9 @@
                 </div>
                 <div class="col-xl-6 col-lg-5">
                   <div class="featured-text text-center text-lg-left">
-                    <h4>What is a (non-compliant) CDMS?</h4>
+                    <h4>What is a traditional CDMS?</h4>
                     <p class="text-black-100 mb-0" style="padding-bottom:8px;">
-                        At it’s most basic, a CDMS allow users to enter observation data into a database.
+                        At it’s most basic, a traditional CDMS allow users to enter observation data into a database.
                     </p>
                     <p>
                         Existing solutions may have many other capabilities, including:
@@ -262,7 +262,7 @@
   
 
 
-
+<!--
 
   <section id="approach" class="bg-light" style="padding-bottom: 160px">
 
@@ -292,7 +292,7 @@
   
   </section>
   
-  
+  -->
   
   
   <!-- Signup Section --
@@ -321,21 +321,20 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-4 mb-3 mb-md-0">
-<!--
+        <div class="col-md-6 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
+              <h4 class="text-uppercase m-0">Solution development</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">
+		  <a href="https://github.com/opencdms">www.github.com/opencdms</a>
+	      </div>
             </div>
           </div>
--->
       </div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
+        <div class="col-md-6 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-envelope text-primary mb-2"></i>
@@ -348,8 +347,8 @@
           </div>
         </div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
 <!--
+        <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
@@ -358,9 +357,8 @@
               <div class="small text-black-50">+1 (555) 902-8832</div>
             </div>
           </div>
--->
         </div>
-
+-->
       </div>
 
       <div class="social d-flex justify-content-center">
