Uncomment "contact" tab

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#approach">Approach</a>
           </li>
+-->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
- -->
         </ul>
       </div>
     </div>
@@ -321,18 +321,6 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-6 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Solution development</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">
-		  <a href="https://github.com/opencdms">www.github.com/opencdms</a>
-	      </div>
-            </div>
-          </div>
-      </div>
 
         <div class="col-md-6 mb-3 mb-md-0">
           <div class="card py-4 h-100">
@@ -343,6 +331,19 @@
               <div class="small text-black-50">
                 <a>info@opencdms.org</a>
               </div>
+            </div>
+          </div>
+        </div>
+	      
+	<div class="col-md-6 mb-3 mb-md-0">
+          <div class="card py-4 h-100">
+            <div class="card-body text-center">
+              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">GitHub</h4>
+              <hr class="my-4">
+              <div class="small text-black-50">
+		  <a href="https://github.com/opencdms">www.github.com/opencdms</a>
+	      </div>
             </div>
           </div>
         </div>
