Updating page names and links

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -15,7 +15,9 @@
 {# TODO: menubar should import partials/opencdms_menubar.html #}
           <h1>OpenCDMS</h1>
           <p><em>Working together</em> to improve<br/>
-            Climate Data Management Systems</p>
+            Climate Data Management Systems<br/>
+            for Earth system data management
+          </p>
           <a href="/about/overview/" title="Overview" class="md-button md-button--primary">
             Overview
           </a>
